# footings-idi-model

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  active-extract.csv  assumptions.html  changelog.html  disabled-extract.csv  environment.yml  frame-dlr.csv  genindex.html  index.html  license.html  noxfile.py  objects.inv  pyproject.toml  searchindex.js  setup.cfg  setup.py  versioneer.py
.github/workflows/: gh-pages.yaml  main.yml  tests.yaml
_downloads/15fd23e9a35c13374e0cb19ba4173d5b/: Audit-DValSisRPMD.xlsx
_downloads/881174c869d1233c1ce4faaf81729b7e/: Audit-AValBasePMD.xlsx
_downloads/97406032cdd53381bfad62a4a8bf3995/: Audit-DValCatRPMD.xlsx
_downloads/9cf0c50576345a1a2bf3946b7ca51d94/: Audit-ActiveLivesValEMD.xlsx
_downloads/a5f37983c56a2b29532252ab5827acd7/: Audit-DisabledLivesValEMD.xlsx
_modules/footings/: model.html
_sources/: assumptions.rst.txt
_sources/data/: index.rst.txt
data/model_outputs/: index.html
dev/: .buildinfo  assumptions.html  changelog.html  extracts.html  genindex.html  index.html  installation.html  license.html  objects.inv  outputs.html  product_info.html  scenarios.html  search.html  searchindex.js  user_guide.html
dev/.doctrees/: assumptions.doctree  changelog.doctree  environment.pickle  index.doctree  license.doctree  product_info.doctree
dev/_modules/: index.html
dev/_sources/: changelog.md.txt  installation.rst.txt  license.rst.txt
dev/_static/: documentation_options.js
dev/data/: index.html
dev/io/: index.html
dev/models/: index.html
devd/: genindex.html  index.html  search.html  searchindex.js
devd/.doctrees/: environment.pickle  installation.doctree
devd/_sources/: changelog.md.txt  index.rst.txt
devd/_static/: documentation_options.js
devd/models/: index.html
docs/: api.rst  assumptions.md  assumptions.rst  changelog.md  changelog.rst  conf.py  extracts.md  index.rst  installation.rst  models.rst  outputs.md  product_info.rst  testing.rst  user_guide.ipynb  volume-tbl.csv
docs/models/: index.rst
environments/: environment-dev.yml  environment.yml  footings-idi-model-dev.yml
master/: .buildinfo  assumptions.html  changelog.html  genindex.html  index.html  installation.html  license.html  objects.inv  product_info.html  scenarios.html  search.html  searchindex.js  user_guide.html
master/.doctrees/: changelog.doctree  environment.pickle  extracts.doctree  index.doctree  outputs.doctree  scenarios.doctree  user_guide.doctree
master/_modules/: index.html
master/_sources/: changelog.md.txt  extracts.md.txt  index.rst.txt  outputs.md.txt
master/_static/: documentation_options.js
master/data/: index.html
master/models/: index.html
models/extract_models/: index.html
models/policy_models/: active_deterministic_base.html  active_deterministic_cat.html  active_deterministic_rop.html  active_deterministic_wop.html  disabled_deterministic_cat.html  disabled_deterministic_sis.html  index.html
src/footings_idi_model/: __init__.py  __main__.py  _version.py  attributes.py  extracts.py  outputs.py  parameters.py  scenarios.py  shared.py
src/idi_model/: __init__.py  _version.py
tests/: test_active_life_model.py  test_active_lives_model.py  test_alr_deterministic.py  test_disabled_life_model.py  test_disabled_lives_model.py  test_dlr_deterministic.py  test_extract_generator_model.py
tests/data/: active-lives-sample-base.csv  active-lives-sample.csv  create_samples.py  (+2 more)
(+472 files in other folders)
