
[build-system]
requires = ["setuptools>=40.6.0", "wheel", "versioneer-518"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 90
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
