[versioneer]
VCS = git
style = pep440
versionfile_source = src/footings_idi_model/_version.py
versionfile_build = footings_idi_model/_version.py
tag_prefix = v
parentdir_prefix = footings_idi_model-


[metadata]
name = footings_idi_model
description = An example individual disability model using the footings framework.
long_description = file: README.md
long_description_content_type = text/markdown
url = ...
author = Dustin Tindall
author_email = dustin.tindall@gmail.com
maintainer = Dustin Tindall
maintainer_email = dustin.tindall@gmail.com
license = BSD (3-clause)
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Source=https://github.com/footings/idi-model
    Tracker=https://github.com/footings/idi-model/issues


[options]
package_dir=
    =src
packages=find:
install_requires =
    footings>=0.9.0
    numpy
    pandas
    dask
    pyyaml
python_requires = >=3.7
test_suite = tests
include_package_data = true

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest
docs =
    sphinx
    numpydoc
    sphinx_rtd_theme
    nbsphinx
dev =
    flake8
    black
    pre-commit


[bdist_wheel]
universal = true


[flake8]
exclude =
    __init__.py,
    _version.py,
    versioneer.py
ignore =
    E231, # missing whitespace after
    E722, # bare except
    W503 # line break before binary operator
max-line-length = 120
